--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
   <meta charset="UTF-8">
   <title>Live or Dead</title>
 
-  <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' 'unsafe-inline' https://pagead2.googlesyndication.com;
-    connect-src 'self';
-    style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-    font-src 'self' https://cdnjs.cloudflare.com;
-    frame-src https://pagead2.googlesyndication.com;
-    img-src 'self' data: https://*.googlesyndication.com;
+    script-src 'self' 'unsafe-inline'
+      https://pagead2.googlesyndication.com
+      https://*.googlesyndication.com
+      https://*.adtrafficquality.google;
+    connect-src 'self'
+      https://*.adtrafficquality.google
+      https://pagead2.googlesyndication.com;
+    style-src 'self' 'unsafe-inline'
+      https://cdnjs.cloudflare.com;
+    font-src 'self'
+      https://cdnjs.cloudflare.com;
+    frame-src 'self'
+      https://pagead2.googlesyndication.com
+      https://*.adtrafficquality.google;
+    fenced-frame-src 'self'
+      https://pagead2.googlesyndication.com
+      https://*.adtrafficquality.google;
+    img-src 'self' data:
+      https://*.googlesyndication.com
+      https://*.adtrafficquality.google;
     object-src 'none';
     base-uri 'self';
     form-action 'self';
