--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Live or Dead</title>
 
+  <!-- Content‑Security‑Policy -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self' 'unsafe-inline'
@@ -31,7 +32,7 @@
     form-action 'self';
   ">
 
-  <!-- AdSense -->
+  <!-- AdSense bootstrap -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9273959048665563" crossorigin="anonymous"></script>
 
   <!-- FontAwesome -->
@@ -50,6 +51,12 @@
       padding: 0.5rem;
       font-size: 1rem;
       margin: 0.5rem 0;
+      box-sizing: border-box; /* garante largura idêntica */
+    }
+    .description {
+      margin: 0.75rem 0 1.25rem;
+      font-size: 0.95rem;
+      color: #444;
     }
     .result-card {
       margin-top: 1.5rem;
@@ -84,16 +91,8 @@
 </head>
 <body>
 
-  <!-- Top AdSense Banner -->
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-9273959048665563"
-       data-ad-slot="9102667654"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
-  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-
   <h1>Live or Dead</h1>
+  <p id="desc" class="description"></p>
 
   <!-- Language selector -->
   <label id="langLabel" for="langSelect">Choose another language:</label>
@@ -123,40 +122,43 @@
     <a href="privacy.html">Privacy</a>
   </footer>
 
-  <!-- Script -->
   <script>
     const data = {
       en: {
-        langLabel: 'Choose another language:',
-        hint: 'Type a URL below to see if it is up or down.',
-        check: 'Check',
-        invalid: 'Invalid hostname.',
+        langLabel  : 'Choose another language:',
+        hint       : 'Type a URL below to see if it is up or down.',
+        desc       : 'Instantly test whether any website is live or dead. Enter a domain, hit **Check** and get the answer in seconds!',
+        check      : 'Check',
+        invalid    : 'Invalid hostname.',
         placeholder: 'e.g. example.com',
-        network: 'Network error.'
+        network    : 'Network error.'
       },
       pt: {
-        langLabel: 'Escolha outro idioma:',
-        hint: 'Digite uma URL abaixo para verificar se ela está online ou offline.',
-        check: 'Checar',
-        invalid: 'Host inválido.',
+        langLabel  : 'Escolha outro idioma:',
+        hint       : 'Digite uma URL abaixo para verificar se ela está online ou offline.',
+        desc       : 'Teste instantaneamente se qualquer site está no ar ou fora do ar. Digite o domínio, toque em **Checar** e veja o resultado em segundos!',
+        check      : 'Checar',
+        invalid    : 'Host inválido.',
         placeholder: 'ex: exemplo.com',
-        network: 'Erro de rede.'
+        network    : 'Erro de rede.'
       },
       es: {
-        langLabel: 'Elige otro idioma:',
-        hint: 'Escriba una URL abajo para verificar si está en línea o sin conexión.',
-        check: 'Comprobar',
-        invalid: 'Host inválido.',
+        langLabel  : 'Elige otro idioma:',
+        hint       : 'Escriba una URL abajo para verificar si está en línea o sin conexión.',
+        desc       : 'Comprueba al instante si cualquier sitio está activo o caído. Introduce el dominio, pulsa **Comprobar** y obtén la respuesta en segundos!',
+        check      : 'Comprobar',
+        invalid    : 'Host inválido.',
         placeholder: 'ej: ejemplo.com',
-        network: 'Error de red.'
+        network    : 'Error de red.'
       },
       fr: {
-        langLabel: 'Choisissez une autre langue :',
-        hint: 'Entrez une URL ci-dessous pour vérifier si elle est en ligne ou hors ligne.',
-        check: 'Vérifier',
-        invalid: 'Nom d’hôte non valide.',
+        langLabel  : 'Choisissez une autre langue :',
+        hint       : 'Entrez une URL ci-dessous pour vérifier si elle est en ligne ou hors ligne.',
+        desc       : 'Vérifiez instantanément si un site est en ligne ou hors ligne. Saisissez le domaine, cliquez sur **Vérifier** et obtenez la réponse en quelques secondes !',
+        check      : 'Vérifier',
+        invalid    : 'Nom d\u2019hôte non valide.',
         placeholder: 'ex: exemple.com',
-        network: 'Erreur réseau.'
+        network    : 'Erreur réseau.'
       }
     };
 
@@ -168,6 +170,7 @@
     const langLabel = document.getElementById('langLabel');
     const select    = document.getElementById('langSelect');
     const hintEl    = document.getElementById('hint');
+    const descEl    = document.getElementById('desc');
     const btn       = document.getElementById('checkBtn');
     const input     = document.getElementById('siteUrl');
     const card      = document.getElementById('result');
@@ -178,6 +181,7 @@
       const cfg = data[currentLang];
       langLabel.textContent = cfg.langLabel;
       hintEl.textContent    = cfg.hint;
+      descEl.textContent    = cfg.desc;
       btn.textContent       = cfg.check;
       input.placeholder     = cfg.placeholder;
       select.value          = currentLang;
