--- a/index.html
+++ b/index.html
@@ -10,30 +10,37 @@
     default-src 'self';
     script-src 'self' 'unsafe-inline'
       https://pagead2.googlesyndication.com
+      https://tpc.googlesyndication.com
       https://*.googlesyndication.com
-      https://*.adtrafficquality.google;
+      https://securepubads.g.doubleclick.net
+      https://www.googletagservices.com
+      https://*.googletagservices.com;
     connect-src 'self'
-      https://*.adtrafficquality.google
-      https://pagead2.googlesyndication.com;
+      https://pagead2.googlesyndication.com
+      https://tpc.googlesyndication.com
+      https://securepubads.g.doubleclick.net
+      https://*.googletagservices.com;
     style-src 'self' 'unsafe-inline'
+      https://fonts.googleapis.com
       https://cdnjs.cloudflare.com;
-    font-src 'self'
-      https://cdnjs.cloudflare.com;
+    img-src 'self' data:
+      https://pagead2.googlesyndication.com
+      https://tpc.googlesyndication.com
+      https://*.gstatic.com;
     frame-src 'self'
       https://pagead2.googlesyndication.com
-      https://*.adtrafficquality.google;
-    fenced-frame-src 'self'
-      https://pagead2.googlesyndication.com
-      https://*.adtrafficquality.google;
-    img-src 'self' data:
-      https://*.googglesyndication.google.com
-      https://*.adtrafficquality.google;
+      https://tpc.googlesyndication.com
+      https://*.google.com
+      https://*.googlesyndication.com;
+    font-src 'self'
+      https://fonts.gstatic.com
+      https://cdnjs.cloudflare.com;
     object-src 'none';
     base-uri 'self';
     form-action 'self';
   ">
 
-  <!-- AdSense bootstrap -->
+  <!-- AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9273959048665563" crossorigin="anonymous"></script>
 
   <!-- FontAwesome & Google Fonts -->
@@ -154,6 +161,18 @@
 <body>
   <div class="container">
     <h1>Live or Dead</h1>
+
+    <!-- AdSense -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-9273959048665563"
+         data-ad-slot="9102667654"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     <p id="desc" class="description"></p>
     <section id="faq" class="faq"></section>
 
