--- a/about.html
+++ b/about.html
@@ -1,18 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About - Live or Dead</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f0f2f5;
+      color: #333;
+      display: flex;
+      justify-content: center;
+      padding: 2rem;
+    }
+    .container {
+      background: #fff;
+      max-width: 600px;
+      width: 100%;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    h1 {
+      font-size: 1.75rem;
+      color: #4a90e2;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+    p {
+      margin-bottom: 1rem;
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #555;
+    }
+    a {
+      display: inline-block;
+      margin-top: 1.5rem;
+      color: #4a90e2;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 2rem;
+      text-align: center;
+      font-size: 0.8rem;
+      color: #999;
+    }
+    footer a {
+      color: #4a90e2;
+      margin: 0 0.5rem;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <main>
+  <div class="container">
     <h1>About This Tool</h1>
     <p>This simple tool helps you check if a website is currently online or down.</p>
     <p>It's designed for anyone who needs a quick and accurate way to verify site availability, without installing plugins or extensions.</p>
     <p>Whether you're a casual user, a developer, or someone managing services, Live or Dead saves you time and gives clarity.</p>
     <p>We do not store or track any URLs entered. Everything is processed live and anonymously.</p>
+
     <a href="index.html">← Back to the Checker</a>
-  </main>
+
+    <footer>
+      <a href="about.html">About</a> |
+      <a href="privacy.html">Privacy</a> |
+      <a href="mailto:contact@liveordead.work">Contact</a>
+    </footer>
+  </div>
 </body>
 </html>
