--- a/privacy.html
+++ b/privacy.html
@@ -1,18 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy - Live or Dead</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f0f2f5;
+      color: #333;
+      display: flex;
+      justify-content: center;
+      padding: 2rem;
+    }
+    .container {
+      background: #fff;
+      max-width: 600px;
+      width: 100%;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    h1 {
+      font-size: 1.75rem;
+      color: #4a90e2;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+    p {
+      margin-bottom: 1rem;
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #555;
+    }
+    strong {
+      color: #222;
+    }
+    a {
+      color: #4a90e2;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 2rem;
+      text-align: center;
+      font-size: 0.8rem;
+      color: #999;
+    }
+    footer a {
+      color: #4a90e2;
+      margin: 0 0.5rem;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <main>
+  <div class="container">
     <h1>Privacy Policy</h1>
     <p><strong>No personal data is collected.</strong></p>
-    <p>Live or Dead does not store, log, or associate the URLs you check with any user or session.</p>
-    <p>We use Google AdSense to monetize the site. Google may use cookies or tracking technologies to personalize ads. Learn more at <a href="https://policies.google.com/technologies/ads" target="_blank">Google's Ads Policy</a>.</p>
-    <p>By using this tool, you agree to this privacy approach.</p>
+    <p>Live or Dead does not store, log, or associate the URLs you check with any identifiable user or session. All checks are processed anonymously and discarded immediately after completion.</p>
+    
+    <p><strong>Third-party services</strong></p>
+    <p>This website uses Google AdSense for monetization. Google may collect data through cookies and similar technologies to serve relevant advertisements. These cookies are managed solely by Google, and Live or Dead does not access or control them.</p>
+    <p>For more information about how Google uses this data, visit the <a href="https://policies.google.com/technologies/ads" target="_blank" rel="noopener noreferrer">Google Ads Policy</a>.</p>
+    
+    <p><strong>Consent</strong></p>
+    <p>By using this website, you consent to this privacy approach and agree to the use of cookies by third-party advertisers.</p>
+
     <a href="index.html">← Back to the Checker</a>
-  </main>
+
+    <footer>
+      <a href="about.html">About</a> |
+      <a href="privacy.html">Privacy</a> |
+      <a href="mailto:contact@liveordead.work">Contact</a>
+    </footer>
+  </div>
 </body>
 </html>
