--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
         faq        : `<h2>FAQ</h2>
                      <details><summary>What URLs can I test?</summary><p>You can test domains like <code>example.com</code>, subdomains like <code>blog.example.com</code>, or full URLs with protocol (<code>https://example.com</code>).</p></details>
                      <details><summary>Is Live or Dead really free?</summary><p>Yes! We offer unlimited checks at no cost. Your data is not stored, and there are no hidden fees.</p></details>
-                     <details><summary>How often can I check a site?</summary><p>You can perform as many checks as you want, but to ensure fair use, we limit one request every 2 seconds per IP.</p></details>`,
+                     <details><summary>How often can I check a site?</summary><p>You can perform as many checks as you want, but to ensure fair use, we limit one request every 2 seconds per IP.</p></details>
+                     <details><summary>Can I use this for monitoring multiple sites?</summary><p>This tool is designed for manual, real-time checks. While you can use it for multiple URLs, it is not intended for automated uptime monitoring.</p></details>
+                     <details><summary>Does this check DNS, SSL or just HTTP response?</summary><p>We perform a simple HTTP request to determine if the site responds and measure the server time. Advanced diagnostics are not included.</p></details>`,
         check      : 'Check',
         invalid    : 'Invalid hostname.',
         placeholder: 'e.g. example.com',
@@ -231,7 +233,9 @@
         faq        : `<h2>Perguntas Frequentes</h2>
                      <details><summary>Quais URLs posso testar?</summary><p>Você pode testar domínios como <code>exemplo.com</code>, subdomínios como <code>blog.exemplo.com</code> ou URLs completas com protocolo (<code>https://exemplo.com</code>).</p></details>
                      <details><summary>O Live ou Dead é realmente gratuito?</summary><p>Sim! Oferecemos verificações ilimitadas sem custo. Nenhum dado é armazenado e não há taxas escondidas.</p></details>
-                     <details><summary>Com que frequência posso checar um site?</summary><p>Você pode realizar quantas verificações quiser, mas para uso justo, limitamos uma solicitação a cada 2 segundos por IP.</p></details>`,
+                     <details><summary>Com que frequência posso checar um site?</summary><p>Você pode realizar quantas verificações quiser, mas para uso justo, limitamos uma solicitação a cada 2 segundos por IP.</p></details>
+                     <details><summary>Posso usar isso para monitorar vários sites?</summary><p>Esta ferramenta foi feita para verificações manuais e em tempo real. Você pode usá-la para múltiplas URLs, mas não substitui sistemas automáticos de monitoramento.</p></details>
+                     <details><summary>Isso verifica DNS, SSL ou apenas resposta HTTP?</summary><p>Fazemos uma solicitação HTTP simples para saber se o site responde, medindo o tempo do servidor. Não oferecemos diagnósticos avançados.</p></details>`,
         check      : 'Checar',
         invalid    : 'Host inválido.',
         placeholder: 'ex: exemplo.com',
@@ -247,7 +251,9 @@
         faq        : `<h2>Preguntas Frecuentes</h2>
                      <details><summary>¿Qué URLs puedo comprobar?</summary><p>Puedes comprobar dominios como <code>ejemplo.com</code>, subdominios como <code>blog.ejemplo.com</code> o URLs completas con protocolo (<code>https://ejemplo.com</code>).</p></details>
                      <details><summary>¿Live or Dead es realmente gratis?</summary><p>¡Sí! Ofrecemos verificaciones ilimitadas sin costo. No almacenamos ningún dato y no hay cargos ocultos.</p></details>
-                     <details><summary>¿Con qué frecuencia puedo hacer comprobaciones?</summary><p>Puedes realizar tantas comprobaciones como quieras, pero para un uso justo, limitamos una solicitud cada 2 segundos por IP.</p></details>`,
+                     <details><summary>¿Con qué frecuencia puedo hacer comprobaciones?</summary><p>Puedes realizar tantas comprobaciones como quieras, pero para un uso justo, limitamos una solicitud cada 2 segundos por IP.</p></details>
+                     <details><summary>¿Puedo usar esto para monitorear varios sitios?</summary><p>Esta herramienta está diseñada para comprobaciones manuales en tiempo real. Puedes usarla con múltiples URLs, pero no es un sistema de monitoreo automatizado.</p></details>
+                     <details><summary>¿Esto verifica DNS, SSL o solo respuesta HTTP?</summary><p>Realizamos una solicitud HTTP simple para ver si el sitio responde y medir el tiempo del servidor. No ofrecemos diagnósticos avanzados.</p></details>`,
         check      : 'Comprobar',
         invalid    : 'Host inválido.',
         placeholder: 'ej: ejemplo.com',
@@ -263,7 +269,9 @@
         faq        : `<h2>FAQ</h2>
                      <details><summary>Quelles URLs puis-je tester ?</summary><p>Vous pouvez tester des domaines comme <code>exemple.com</code>, des sous-domaines comme <code>blog.exemple.com</code> ou des URLs complètes avec protocole (<code>https://exemple.com</code>).</p></details>
                      <details><summary>Live or Dead est-il vraiment gratuit ?</summary><p>Oui ! Nous offrons des vérifications illimitées sans frais. Aucune donnée n’est stockée et il n’y a pas de frais cachés.</p></details>
-                     <details><summary>À quelle fréquence puis-je effectuer des vérifications ?</summary><p>Vous pouvez effectuer autant de vérifications que vous le souhaitez, mais pour une utilisation équitable, nous limitons une requête toutes les 2 secondes par IP.</p></details>`,
+                     <details><summary>À quelle fréquence puis-je effectuer des vérifications ?</summary><p>Vous pouvez effectuer autant de vérifications que vous le souhaitez, mais pour une utilisation équitable, nous limitons une requête toutes les 2 secondes par IP.</p></details>
+                     <details><summary>Puis-je utiliser cet outil pour plusieurs sites ?</summary><p>Cette plateforme est conçue pour des vérifications manuelles et ponctuelles. Vous pouvez tester plusieurs URLs, mais elle ne remplace pas un système de surveillance automatisé.</p></details>
+                     <details><summary>Vérifie-t-elle le DNS, le SSL ou juste la réponse HTTP ?</summary><p>Nous effectuons une requête HTTP simple pour déterminer si le site répond et mesurer le temps du serveur. Aucun diagnostic avancé n'est fourni.</p></details>`,
         check      : 'Vérifier',
         invalid    : 'Nom d’hôte non valide.',
         placeholder: 'ex: exemple.com',
