--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,14 @@
     h1 {
       font-size: 1.75rem;
       color: #4a90e2;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+    p.description {
+      margin-bottom: 2rem;
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #555;
       text-align: center;
     }
     ul {
@@ -62,9 +69,13 @@
 <body>
   <div class="container">
     <h1 id="blogTitle">Blog</h1>
+    <p class="description" id="blogIntro">
+      Explore tips, explanations, and insights about website availability, common connectivity issues, and what those cryptic error codes actually mean. Whether you're a developer or just curious about why a site won't load, these articles help you understand the invisible web around you.
+    </p>
     <ul id="blogList"></ul>
 
     <footer>
+      <a href="index.html">Home</a> |
       <a href="about.html" id="aboutLink">About</a> |
       <a href="privacy.html" id="privacyLink">Privacy</a> |
       <a href="mailto:contact@liveordead.work" id="contactLink">Contact</a>
@@ -75,6 +86,7 @@
     const blogData = {
       en: {
         blogTitle: 'Blog',
+        blogIntro: 'Explore tips, explanations, and insights about website availability, common connectivity issues, and what those cryptic error codes actually mean. Whether you\'re a developer or just curious about why a site won\'t load, these articles help you understand the invisible web around you.',
         aboutText: 'About',
         privacyText: 'Privacy',
         contactText: 'Contact',
@@ -86,6 +98,7 @@
       },
       pt: {
         blogTitle: 'Blog',
+        blogIntro: 'Explore dicas, explicações e insights sobre disponibilidade de sites, problemas comuns de conexão e o que significam aqueles códigos de erro misteriosos. Seja você um desenvolvedor ou apenas curioso sobre por que um site não carrega, estes artigos vão te ajudar a entender a internet invisível ao seu redor.',
         aboutText: 'Sobre',
         privacyText: 'Privacidade',
         contactText: 'Contato',
@@ -97,6 +110,7 @@
       },
       es: {
         blogTitle: 'Blog',
+        blogIntro: 'Explora consejos, explicaciones y conocimientos sobre la disponibilidad de sitios web, problemas comunes de conectividad y el significado de esos códigos de error misteriosos. Ya seas desarrollador o simplemente tengas curiosidad por saber por qué no carga una web, estos artículos te ayudarán a entender mejor lo que pasa detrás de escena.',
         aboutText: 'Acerca de',
         privacyText: 'Privacidad',
         contactText: 'Contacto',
@@ -108,6 +122,7 @@
       },
       fr: {
         blogTitle: 'Blog',
+        blogIntro: 'Découvrez des conseils, des explications et des informations sur la disponibilité des sites Web, les problèmes de connectivité courants et la signification des fameux codes d\'erreur. Que vous soyez développeur ou simplement curieux, ces articles vous aideront à mieux comprendre ce qui se passe lorsque un site ne se charge pas.',
         aboutText: 'À propos',
         privacyText: 'Confidentialité',
         contactText: 'Contact',
@@ -120,12 +135,13 @@
     };
 
     const userLang = navigator.language.startsWith('pt') ? 'pt'
-                   : navigator.language.startsWith('es') ? 'es'
-                   : navigator.language.startsWith('fr') ? 'fr'
-                   : 'en';
+                     : navigator.language.startsWith('es') ? 'es'
+                     : navigator.language.startsWith('fr') ? 'fr'
+                     : 'en';
 
     const langData = blogData[userLang];
     document.getElementById('blogTitle').textContent = langData.blogTitle;
+    document.getElementById('blogIntro').textContent = langData.blogIntro;
     document.getElementById('aboutLink').textContent = langData.aboutText;
     document.getElementById('privacyLink').textContent = langData.privacyText;
     document.getElementById('contactLink').textContent = langData.contactText;
